# research-ai-agent-api-python

./: .env.example  Makefile  NEXT_STEPS.md  README.md  pyproject.toml
app/: main.py
app/api/routes/: agent.py  arxiv.py  conferences.py  conversations.py  cvf.py  health.py  papers.py  playground.py  pubmed.py  uploads.py  usage.py
app/core/: config.py  errors.py  security.py  trace.py
app/models/: agent.py  arxiv.py  common.py  conferences.py  conversations.py  cvf.py  papers.py  pubmed.py  storage.py  usage.py
app/services/: agent.py  arxiv.py  conference.py  conversations.py  cvf.py  dynamodb.py  jobs.py  mock_ai.py  openai_client.py  papers.py  pdf_reader.py  pubmed.py  s3.py  usage.py
