[project]
name = "research-ai-agent-api-python"
version = "0.1.0"
description = "Python FastAPI port of the research AI agent API"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "boto3>=1.35.0",
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "httpx>=0.27.0",
  "langchain>=1.0.0",
  "langchain-openai>=1.0.0",
  "openai>=1.51.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.5.0",
  "python-dotenv>=1.0.1",
  "pypdf>=5.0.1",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.9",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
